Se cambia la ubicación de la actividad practica y preguntas.

--- a/Nivel1-A/Documentos/Guia/guia1.tex
+++ b/Nivel1-A/Documentos/Guia/guia1.tex
@@ -172,5 +172,6 @@ Para ver las tres en simultaneo haga click en \menu{Window>Tile Horizontally} mo
     \item El cruce entre los ríos Paraná y Iguazú.
     \item Las cataratas del Iguazú donde el río Iguazú se angosta.
   \end{enumerate}
-
 \end{enumerate}
+
+Estas preguntas y actividades no serán evaluadas. Su objetivo es discutirlas en el foro de consultas e intercambio de la clase.
