--- a/Nivel1-A/Documentos/Guia/guia2.tex
+++ b/Nivel1-A/Documentos/Guia/guia2.tex
@@ -39,27 +39,6 @@ La vegetación saludable aparece en tonos de rojos, marrones, naranjas y amarill
 
 Utilice el mapa con puntos de interés para identificar diferentes tipos de vegetación (Figura \ref{fig:mapa}). Explore la ubicación de los puntos mencionados utilizando las herramientas de navegación y zoom  (Figura \ref{fig:mono}). Compare color, tono y textura para cada punto.
 
-\section{Actividad práctica I}
-
-\begin{enumerate}
-  \item Despliegue las tres combinaciones realizadas utilizando múltiples visualizadores(Figura \ref{fig:mono}). Utilice las herramientas \menu{Panning tool} y \menu{Zooming tool} e identifique la intersección río Paraná y río Iguazú (Figura\ref{fig:mapa} punto de referencia 4):
-  \begin{enumerate}
-    \item Compare color y tono de los ríos Paraná e Iguazú. En base a interpretación visual ¿Que combinación considera la más adecuada para identificar sedimentos? ¿Cuál  considera que tiene mayor concentración de sedimentos?
-        \item  Desplácese hasta Puerto Iguazú (\ref{fig:mapa} punto de referencia 11) y analice el área urbana. ¿En qué combinación puede ver con mayor nitidez la red víal?
-          \item  Identifique el emblase Urugua-í (\ref{fig:mapa} punto de referencia 6) y compare presencia de sedimentos con los ríos Paraná y Iguazú. ¿Cuál de ellos presenta menor concentración de sedimentos?
-
-  \end{enumerate}
-
-  \item Identifique en el mapa de referencia los puntos                       1 y 4 correspondientes a Selva Paraense y Bosque Implantado respectivamente (Figura\ref{fig:mapa}) y compare:
-  \begin{enumerate}
-    \item  Compare color y tono de la selva paranaense y el bosque implantado para color natural.
-     \item  Compare color y tono de la selva paranaense y el bosque implantado para infrarrojo color.
-      \item  Compare color y tono de la selva paranaense y el bosque implantado para la combinación "vegetación sana".
-    \item Compare ahora ambas coberturas con los tres visualizadores. ¿En qué combinación encuentra mayor heterogeneidad? ¿Cuál considera que es la más útil para separar diferentes tipos de vegetación?
-     \item Compare un cultivo con cobertura vegetal contra un lote de suelo sin cobertura (\ref{fig:mapa} punto de referencia 8 y 9) ¿Qué combinación considera más útil para medir heterogeneidad para suelo sin cobertura vegetal? ¿y para suelos con vegetación?
-  \end{enumerate}
-  \end{enumerate}
-
 \section{Firmas espectrales}
 
 
@@ -112,9 +91,24 @@ Ahora procederemos a identificar y comparar firmas espectrales de diferentes uso
     \label{fig:spectral-signature}
 \end{figure}
 
-\section{Actividad práctica II}
-
+\section{Actividad práctica}
 \begin{enumerate}
+  \item Despliegue las tres combinaciones realizadas utilizando múltiples visualizadores(Figura \ref{fig:mono}). Utilice las herramientas \menu{Panning tool} y \menu{Zooming tool} e identifique la intersección río Paraná y río Iguazú (Figura\ref{fig:mapa} punto de referencia 4):
+  \begin{enumerate}
+  \item Compare color y tono de los ríos Paraná e Iguazú. En base a interpretación visual ¿Que combinación considera la más adecuada para identificar sedimentos? ¿Cuál  considera que tiene mayor concentración de sedimentos?
+  \item  Desplácese hasta Puerto Iguazú (\ref{fig:mapa} punto de referencia 11) y analice el área urbana. ¿En qué combinación puede ver con mayor nitidez la red víal?
+  \item  Identifique el emblase Urugua-í (\ref{fig:mapa} punto de referencia 6) y compare presencia de sedimentos con los ríos Paraná y Iguazú. ¿Cuál de ellos presenta menor concentración de sedimentos?
+\end{enumerate}
+
+  \item Identifique en el mapa de referencia los puntos 1 y 4 correspondientes a Selva Paraense y Bosque Implantado respectivamente (Figura\ref{fig:mapa}) y compare:
+  \begin{enumerate}
+    \item  Compare color y tono de la selva paranaense y el bosque implantado para color natural.
+    \item  Compare color y tono de la selva paranaense y el bosque implantado para infrarrojo color.
+    \item  Compare color y tono de la selva paranaense y el bosque implantado para la combinación "vegetación sana".
+    \item Compare ahora ambas coberturas con los tres visualizadores. ¿En qué combinación encuentra mayor heterogeneidad? ¿Cuál considera que es la más útil para separar diferentes tipos de vegetación?
+    \item Compare un cultivo con cobertura vegetal contra un lote de suelo sin cobertura (\ref{fig:mapa} punto de referencia 8 y 9) ¿Qué combinación considera más útil para medir heterogeneidad para suelo sin cobertura vegetal? ¿y para suelos con vegetación?
+  \end{enumerate}
+
   \item Seleccione entre las pestañas abiertas la que corresponda a la combinación color real (Sección \ref{sec:colorreal}). Inserte un pin para el río Paraná, río Iguazú y embalse Urugua-í. Modifique el nombre y color de los mismos con la herramienta \menu{Pin Manager} y grafique con la herramienta \menu{Spectrum View}
   \begin{enumerate}
       \item Compare las tres firmas espectrales. Analice el patrón de reflectancia. ¿Presentan todas el mismo patrón?
@@ -128,6 +122,8 @@ Ahora procederemos a identificar y comparar firmas espectrales de diferentes uso
   \end{enumerate}
 	\item Identifique un área urbana, añada un pin. Modifique nombre y color. Compare con el resto de las firmas espectrales. ¿Que diferencias observa con respecto a suelo sin cobertura vegetal? ¿En qué regiones del espectro las observa?
   \end{enumerate}
+
+Estas preguntas y actividades no serán evaluadas. Su objetivo es discutirlas en el foro de consultas e intercambio de la clase.
 
 %Ver cómo manejar el tema de borrar pines en las comparaciones
 % Añadir al anexo las longitudes de onda x mision satelital.
