--- a/Nivel1-A/Documentos/Guia/guia3.tex
+++ b/Nivel1-A/Documentos/Guia/guia3.tex
@@ -157,7 +157,7 @@ y haciendo click en \menu{Ok}.
 Es posible también hacer un subset de bandas eligiendolas de la pestaña \menu{Band subset}.
 
 \section{Reproyección}
-Para algunas aplicacione la proyección por defecto de la imagen puede no ser la más indicada. Para cambiar la proyección dirijasé a \menu{Raster > Geometric operations > Reprojection} (Figura \ref{fig:repro}). 
+Para algunas aplicacione la proyección por defecto de la imagen puede no ser la más indicada. Para cambiar la proyección dirijasé a \menu{Raster > Geometric operations > Reprojection} (Figura \ref{fig:repro}).
 
 \begin{figure}[h!]
     \centering
@@ -191,6 +191,7 @@ En la pestaña \menu{Reprojection parameters} elija la opción \emph{Custom CRS}
     \item La zona de forestaciones en color verde más oscuro entre la selva Paranaense y el embalse Urugua-í.
     \item El aeropuerto de cataratas del Iguazú en medio de la selva Paranaense.
   \end{enumerate}
+  ¿Que combinación de bandas conviene utilizar para identificar cada uno?
 
   \item Objenga una firma espectral de:
   \begin{enumerate}
@@ -210,6 +211,7 @@ En la pestaña \menu{Reprojection parameters} elija la opción \emph{Custom CRS}
     \item Que observa en la zona de forestaciones.
     \item Que observa en la zona de cultivos.
   \end{enumerate}
+  ¿En que se parecen? ¿Que coberturas cambian de color entre las dos imágenes?
 
   \item Compare las firmas espectrales obtenidas de la imagen Landsat 8 del 5 de enero de 2018 y el 13 de julio de 2017.
   \begin{enumerate}
@@ -219,4 +221,7 @@ En la pestaña \menu{Reprojection parameters} elija la opción \emph{Custom CRS}
     \item Sobre las forestaciones.
     \item Sobre un mismo parche de cultivo.
   \end{enumerate}
+  ¿Que firmas espectrales cambian más entre las dos imágenes? ¿A que se debe este cambio? ¿Cómo se explica en término de las propiedades biofísicas de la cobertura observada?
 \end{enumerate}
+
+Estas preguntas y actividades no serán evaluadas. Su objetivo es discutirlas en el foro de consultas e intercambio de la clase.
