--- a/Nivel1-A/Documentos/Guia/guia6.tex
+++ b/Nivel1-A/Documentos/Guia/guia6.tex
@@ -150,20 +150,20 @@ $0.1$ a $0.27$     & Incendio, severidad baja		  & \textcolor{NB4}{$\blacksquare
 $0.27$ a $0.44$    & Incendio, severidad baja-moderada    & \textcolor{NB5}{$\blacksquare$}\texttt{\#fee08b} \\
 $0.44$ a $0.66$    & Incendio, severidad moderada-alta    & \textcolor{NB6}{$\blacksquare$}\texttt{\#fc8d59} \\
 mayor a $0.66$     & Incendio, severidad alta             & \textcolor{NB7}{$\blacksquare$}\texttt{\#d73027} \\ \bottomrule
-\end{tabular} 
+\end{tabular}
 \caption{Tabla de colores para un mapa de deforestación.}
 \label{tab:inc}
 \end{table}
 \end{enumerate}
-\section{Deteccion de camalotes en la región Pampeana}
-
-La Plata, Buenos Aires, Argentina
-16/Enero/2016
-29/Noviembre/2015
-
-\section{Inundaciones en la región noreste}
-
-Resistencia, Chaco Province, Argentina
-
-19/Julio/2014
-30/Noviembre/2017
+%\section{Deteccion de camalotes en la región Pampeana}%
+%
+%La Plata, Buenos Aires, Argentina
+%16/Enero/2016
+%29/Noviembre/2015
+%
+%\section{Inundaciones en la región noreste}
+%
+%Resistencia, Chaco Province, Argentina
+%
+%19/Julio/2014
+%30/Noviembre/2017
