--- a/Nivel1-A/Documentos/Guia/preamble.tex
+++ b/Nivel1-A/Documentos/Guia/preamble.tex
@@ -1,3 +1,5 @@
+% colores
+\usepackage[usenames,dvipsnames]{xcolor}
 % Paquetes de la ams
 \usepackage{amsmath,amsthm,amssymb,amsfonts}
 % Posibilidad de mover la pagina
@@ -42,7 +44,6 @@
 \usepackage{listings}
 
 % Coloreo los links
-\usepackage[usenames,dvipsnames]{xcolor}
 \hypersetup{colorlinks,
      linkcolor={red!50!black},
      citecolor={blue!50!black},
