--- a/Nivel1-A/Documentos/Videos/clase2.tex
+++ b/Nivel1-A/Documentos/Videos/clase2.tex
@@ -37,23 +37,23 @@
   \frametitle{Conociendo el espectro}
   \begin{exampleblock}{Ejemplo:}
     \begin{itemize}
-      \item Visible
+      \item<1,4> Visible
       \begin{itemize}
-        \item<1> $[\lambda=450-495 nm]$ {\color{blue} azul}
-        \item<1> $[\lambda=495-570 nm]$ {\color{green} verde}
-        \item<1> $[\lambda=620-750 nm]$ {\color{red} rojo}
+        \item<1,4> $[\lambda=450-495 nm]$ {\color{blue} azul}
+        \item<1,4> $[\lambda=495-570 nm]$ {\color{green} verde}
+        \item<1,4> $[\lambda=620-750 nm]$ {\color{red} rojo}
       \end{itemize}
-      \item Infrarrojo
+      \item<2,4> Infrarrojo
       \begin{itemize}
-        \item<2> $[\lambda=0.75-1.4\mu m]$ Cercano
-        \item<2> $[\lambda=1.4-3\mu m]$ Onda corta
-        \item<2> $[\lambda=8-15\mu m]$ Termico
+        \item<2,4> $[\lambda=0.75-1.4\mu m]$ Cercano
+        \item<2,4> $[\lambda=1.4-3\mu m]$ Onda corta
+        \item<2,4> $[\lambda=8-15\mu m]$ Termico
       \end{itemize}
-      \item Microondas - SAR
+      \item<3,4> Microondas - SAR
       \begin{itemize}
-        \item<3> $[\nu = 26.5 -18.0 GHz]$ Banda K
-        \item<3> $[\nu = 12.5 - 8.0 GHz]$ Banda X
-        \item<3> $[\nu = 2.0 - 1.0 GHz] $ Banda L
+        \item<3,4> $[\nu = 26.5 -18.0 GHz]$ Banda K
+        \item<3,4> $[\nu = 12.5 - 8.0 GHz]$ Banda X
+        \item<3,4> $[\nu = 2.0 - 1.0 GHz] $ Banda L
       \end{itemize}
     \end{itemize}
   \end{exampleblock}
@@ -204,7 +204,7 @@
 \begin{frame}{\secname : \subsecname}
   \begin{figure}
     \centering
-    \includegraphics[width=0.8\textwidth]{fig:esinfra.png}
+    \includegraphics[width=0.8\textwidth]{fig:esir.png}
     \caption{Interpretación visual - infrarrojo color.}
     \label{}
   \end{figure}
